tests/neg/i15568.check
-- Error: tests/neg/i15568.scala:3:15 ----------------------------------------------------------------------------------
3 |type Bar = Foo[? >: Int <: String] // error
  |               ^
  |               type has potentially conflicting bounds  >: Int <: String
